@@ -217,18 +217,24 @@ def CorrelatedData(filename):
 	# FITS IDI
 	try:
 		return CorrelatedDataIDI(filename)
+	except IOError, e:
+		raise e
 	except:
 		pass
 		
 	# UVFITS
 	try:
 		return CorrelatedDataUV(filename)
+	except IOError, e:
+		raise e
 	except:
 		pass
 		
 	# Measurment Set
 	try:
 		return CorrelatedDataMS(filename)
+	except IOError, e:
+		raise e
 	except:
 		pass
 		
